Fixed ugly scrollbar

--- a/src/App.css
+++ b/src/App.css
@@ -13,7 +13,7 @@ body {
 html *::-webkit-scrollbar {
     width: 5px;
     height: 8px;
-    background-color: #fff;
+    background-color: transparent;
     border-radius: 4px;
 }
 
